@@ -25,6 +25,8 @@ v0.9 [2016-]
             - fixed known issue on rules_listbox + categories_listbox with selection id and array id
             - changed save buttons callback manual save functions with save_changes( page )
             - added validation of important rule values like: "empty_name" "unique_name" "empty_cat"
+            - replaced "listbox:GetSelection()" with "parse_listbox_selection( listbox )"
+            - added "need_save.rules" + "empty_name" + "empty_cat" + "unique_name" to return of "validate.rules()"
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
